# synapse0.15-codex

./: .dockerignore  .env  .env.bak  .gitignore  =0.23  AGENTS.md  ARCHITECTURE.md  Dockerfile  README.md  TEMP_serena_project_yml.txt  docker-compose.yml  index.css  index.html  index.tsx  metadata-1.json  metadata.json  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  pytest.ini  requirements.txt  server.py  test_payload.json  tsconfig.json  vite.config.ts  yaotong_memory.json  yaotong_run_20250903_124123.md  yaotong_run_20250903_124131.md  yaotong_run_20250903_124139.md  yaotong_run_20250903_124415.md  yaotong_run_20250903_124417.md  yaotong_run_20250903_124419.md  yaotong_run_20250903_130514.md  yaotong_run_20250903_130516.md  yaotong_run_20250903_130519.md  yaotong_run_20250903_140807.md  yaotong_run_20250903_140809.md  yaotong_run_20250903_140810.md  项目架构设计与重构方案.txt
.serena/: project.yml
public/: dev-monitor.html
scripts/: smoke_notes.py  smoke_test.py
sentence_transformers/: __init__.py
src/: backend_pipeline.py  dev-monitor-main.tsx  jobs.py  pdfjs.d.ts  progress.py  utils.py
src/agentic/: agenticLoop.ts  autoController.ts  budget.ts  contextPolicy.ts  langExtractAdapter.ts  langExtractService.ts  mindMap.ts  planner.ts  (+6 more)
tests/: test_api.py  test_fusion_pipeline.py  test_graph_builder.py  test_insight_generator.py  test_local_retrieval.py  test_long_term_memory.py  test_mind_map.py  test_models_schemas_shape.py  test_new_api.py  test_planner.py  test_recipe_model.py  test_smoke.py  test_tool_resolution.py  test_tools.py  test_web_search.py
(+171 files in other folders)
